--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
-    "@types/jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.15.11",
-    "prisma": "^4.12.0",
+    "@types/node": "^18.16.3",
+    "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chalk": "4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1"
   }
