--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@tdanks2000/fancyconsolelog": "^0.0.3",
+    "axios": "0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chalk": "4.1.0",
